--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 script:
   - flake8
   - coverage run --source='.' --omit=config/settings/development.py,config/wsgi.py manage.py test -v 2 --settings=config.settings.production
+  - coverage report --skip-covered -m --fail-under=95
 after_success:
   - coveralls
 deploy:
